Fixing issue with image alignment

--- a/css/less/misc.less
+++ b/css/less/misc.less
@@ -24,6 +24,46 @@ img {
 	height: auto;
 }
 
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+.first {
+  margin-left: 0 !important;
+}
+
+.last {
+  margin-right: 0 !important;
+}
+
+.alignleft {
+  float: left;
+  margin: 0.5em 20px 0.5em 0;
+}
+
+.alignright {
+  float: right;
+  margin: 0.5em 0 0.5em 20px;
+}
+
+.aligncenter {
+  display: block;
+  float: none;
+  margin-top: 0.5em;
+  margin-right: auto !important;
+  margin-bottom: 0.5em;
+  margin-left: auto !important;
+}
+
+.alignnone {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
 /*
  * override Bootstrap span class that was
  * causing issues with some post_class() tags 
